# KMeans-CPU-GPU-Benchmark

./: .gitignore  CMakeLists.txt  README.md
data/: generate_dataset.py  preprocessed_data.csv
data/pad/: labels.csv  plot_results.py
data/processed/: labels.csv
data/synthetic/: labels.csv  plot_results.py
plot/: plot_results.py
plots/: centroids.csv  cluster_labels.csv  labels.csv  plot_results.py  results.csv
resources/: kmeans.md  report.md  sources.md
src/: kmeans.hxx  kmeans_parallel.hxx  kmeans_sequential.hxx  main.cxx  preprocess.cxx
src/cpu/: CMakeLists.txt  kmeans.hxx  kmeans_parallel.hxx  kmeans_sequential.hxx  main.cxx  point.hxx
src/gpu/: CMakeLists.txt  kmeans.cuh  kmeans_kernel.cuh  main.cu  point.cuh
utils/: distance.hxx  kmeans.hxx  pca.hxx  standardize.hxx
